--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <title></title>
+        <title>Esercizio Boolean</title>
     </head>
     <body>
         <h1>Hello World</h1>
